[gd_scene load_steps=4 format=3 uid="uid://mfcphb3qtard"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_qqxy4"]
[ext_resource type="PackedScene" uid="uid://bxpuu3k1gsq1y" path="res://player.tscn" id="2_b5nob"]

[sub_resource type="BoxMesh" id="BoxMesh_b5l8u"]
size = Vector3(3, 0.5, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqxy4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -399.0
offset_top = 24.0
offset_right = -20.0
offset_bottom = 172.0
grow_horizontal = 0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 78.0
offset_right = 294.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 50
text = "MECHGAME"

[node name="Bounty1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -399.0
offset_top = -119.0
offset_right = -50.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Garage")
theme_override_font_sizes/font_size = 32
text = "Bounty 1 - $1000"

[node name="Bounty2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 28.0
offset_right = -51.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Garage")
theme_override_font_sizes/font_size = 32
text = "Bounty 2 - $2000"

[node name="Bounty3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 168.0
offset_right = -51.0
offset_bottom = 288.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Garage")
theme_override_font_sizes/font_size = 32
text = "Bounty 3 - $3000"

[node name="Garage" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 124.0
offset_top = -187.0
offset_right = 334.0
offset_bottom = -117.0
grow_vertical = 0
focus_neighbor_right = NodePath("../Bounty1")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_font_sizes/font_size = 32
text = "Garage"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 124.0
offset_top = -94.0
offset_right = 332.0
offset_bottom = -23.0
grow_vertical = 0
focus_neighbor_top = NodePath("../Garage")
focus_neighbor_right = NodePath("../Bounty1")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Player" parent="." instance=ExtResource("2_b5nob")]
process_mode = 4
transform = Transform3D(-0.746348, 0, -0.665556, 0, 1, 0, 0.665556, 0, -0.746348, -7.29866, -0.824452, -3.01644)

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.6398, 0, 4.42122)
current = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.02349, 0.999724, 0, -0.999724, 0.02349, -7.45553, 4.27421, -2.93767)
light_energy = 5.209
shadow_enabled = true
spot_range = 8.09037
spot_angle = 17.39

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2095, -1.97587, -2.95811)
mesh = SubResource("BoxMesh_b5l8u")

[connection signal="pressed" from="Bounty1" to="." method="_on_bounty_1_pressed"]
[connection signal="pressed" from="Garage" to="." method="_on_garage_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
